--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 
 header {
 	background: #BBBBBB;
-	padding: 20px 0;
+	padding: 20px auto;
 }
 
 .caixa {
@@ -98,7 +98,7 @@ footer {
 
 
 .formulario {
-	margin: 40px 30%;
+	margin: 0% 25% ;
 	width: 60%;
 	padding: 20px;
 }
@@ -107,6 +107,7 @@ form label, form legend {
 	display:block;
 	font-size: 20px;
 	margin: 0 0 10px;
+	text-align: left;
 }
 
 .input-padrao {
@@ -117,7 +118,7 @@ form label, form legend {
 }
 
 .periodo{
-	width: 20%;
+	width: 40%;
 	font-size: 20px;
 	background: #a8a7a7;
 }
@@ -145,7 +146,7 @@ form label, form legend {
 }
 
 table {
-	margin: 35px 400px 40px;
+	margin: 10px auto;
 }
 
 thead {
@@ -252,7 +253,7 @@ td, th {
 }
 
 @media screen and (max-width:480px){
-	.caixa, .principal, .conteudo-beneficios, .mapa-conteudo, .video, .produtos{
+	.caixa, .principal, .conteudo-beneficios, .mapa-conteudo, .video, .produtos, .formulario{
 		width: auto;
 	}
 	h1{
@@ -284,7 +285,7 @@ td, th {
 		font-size: 1.5em;
 	}
 	fieldset{
-		text-align: center;
+		text-align: left;
 	}
 	.enviar{
 		position: static;
